# aoc2020

./: Cargo.toml
day01/: part1.rs  part2.rs
day02/: part1.rs  part2.rs
day03/: part1.rs  part2.rs
day04/: part1.rs  part2.rs
day05/: part1.rs  part2.rs
day06/: part1.rs  part2.rs
day07/: part1.rs  part2.rs
day08/: part1.rs  part2.rs
day09/: part1.rs  part2.rs
day10/: part1.rs  part2.rs
day11/: part1.rs  part2.rs
day12/: part1.rs
src/: lib.rs
