[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Christos Katsakioris <ckatsak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"

[lib]
name = "aoc2020"
path = "src/lib.rs"

[[bin]]
name = "day01a"
path = "day01/part1.rs"

[[bin]]
name = "day01b"
path = "day01/part2.rs"
