[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Christos Katsakioris <ckatsak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
regex = "1"

[lib]
name = "aoc2020"
path = "src/lib.rs"

[[bin]]
name = "day01a"
path = "day01/part1.rs"

[[bin]]
name = "day01b"
path = "day01/part2.rs"

[[bin]]
name = "day02a"
path = "day02/part1.rs"

[[bin]]
name = "day02b"
path = "day02/part2.rs"

[[bin]]
name = "day03a"
path = "day03/part1.rs"

[[bin]]
name = "day03b"
path = "day03/part2.rs"

[[bin]]
name = "day04a"
path = "day04/part1.rs"

[[bin]]
name = "day04b"
path = "day04/part2.rs"

[[bin]]
name = "day05a"
path = "day05/part1.rs"

[[bin]]
name = "day05b"
path = "day05/part2.rs"

[[bin]]
name = "day06a"
path = "day06/part1.rs"

[[bin]]
name = "day06b"
path = "day06/part2.rs"

[[bin]]
name = "day07a"
path = "day07/part1.rs"

[[bin]]
name = "day07b"
path = "day07/part2.rs"

[[bin]]
name = "day08a"
path = "day08/part1.rs"
